--- a/country.html
+++ b/country.html
@@ -154,7 +154,8 @@ body {
     display: none;
 }
 
-.nationalNumber_li .attrEntry {
+.nationalNumber_li .attrEntry,
+.phoneVerificationCode_li .attrEntry {
     display: flex;
     flex-direction: column-reverse;
 }
@@ -254,6 +255,10 @@ body {
 
 #phoneVerificationCode {
     width: 343px;
+    text-align: center;
+}
+.center {
+  text-align: center;
 }
     </style>
 </head>
