--- a/country.html
+++ b/country.html
@@ -155,6 +155,7 @@ body {
 }
 
 .nationalNumber_li .attrEntry,
+.countryCode_li .attrEntry,
 .phoneVerificationCode_li .attrEntry {
     display: flex;
     flex-direction: column-reverse;
