--- a/country.html
+++ b/country.html
@@ -7,7 +7,7 @@
     <title>country+phone</title>
     <!-- <link href="https://fanciful-eclair-8d84f5.netlify.app/assets/country.css" rel="stylesheet" type="text/css"
         data-preload="true"> -->
-    <script src="https://fanciful-eclair-8d84f5.netlify.app/assets/country.js" defer></script>
+    <script src="./assets/country.js" defer></script>
     <style>
       @font-face {
     font-family: 'Noto Sans SC';
