--- a/country.html
+++ b/country.html
@@ -166,6 +166,13 @@ body {
     line-height: 15px; 
     color: #F55050; 
 }
+.selfError {
+    text-align: left;
+    font-size: 11px; 
+    font-weight: 400; 
+    line-height: 15px; 
+    color: #F55050; 
+}
 .pageLevel {
     font-size: 11px; 
     font-weight: 400; 
