--- a/country.html
+++ b/country.html
@@ -167,6 +167,7 @@ body {
     color: #F55050; 
 }
 .selfError {
+  padding-top: 8px;
     text-align: left;
     font-size: 11px; 
     font-weight: 400; 
